--- a/language-fortran/language-fortran.cabal
+++ b/language-fortran/language-fortran.cabal
@@ -32,6 +32,7 @@ library
                        syb >= 0.3,
                        haskell-src >= 1.0,
                        parsec, 	       		 
+                       containers, 	       		 
                        array >= 0.4
 
   hs-source-dirs:      src
