--- a/AutoParallel-Fortran.cabal
+++ b/AutoParallel-Fortran.cabal
@@ -22,12 +22,13 @@ cabal-version:       >=1.10
 executable AutoParallel-Fortran-exe
   hs-source-dirs:      src, language-fortran/src
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base, containers, syb, parsec, array, haskell-src, process, directory
 --                     , AutoParallel-Fortran
-  ghc-options:         -O2 
+--  ghc-options:         -O2 
   -- -i./language-fortran/src
   default-language:    Haskell2010
+  other-modules: BufferTransferAnalysis, CodeEmitter, CodeEmitterUtils, CombineKernels, ConstantFolding, F95IntrinsicFunctions, FortranGenerator, FortranSynthesiser, Language.Fortran, Language.Fortran.Lexer, Language.Fortran.Parser, Language.Fortran.PreProcess, LanguageFortranTools, LoopAnalysis, MiniPP, PreProcessor, SubroutineTable, Transformer, TupleTable, VarAccessAnalysis, VarDependencyAnalysis, Warning
 
 test-suite AutoParallel-Fortran-test
   type:                exitcode-stdio-1.0
