--- a/AutoParallel-Fortran.cabal
+++ b/AutoParallel-Fortran.cabal
@@ -19,6 +19,7 @@ cabal-version:       >=1.10
 --    build-depends:       base >= 4.7 && < 5
 --    default-language:    Haskell2010
 
+--WV: I need better name, something like Glasgow Fortran to OpenCL compiler, gfortocl
 executable AutoParallel-Fortran-exe
   hs-source-dirs:      src, language-fortran/src
   main-is:             Main.hs
